# lox

./: .gitignore
clox/: CMakeLists.txt  chunk.c  chunk.h  debug.c  debug.h  main.c  memory.h  vm.c
clox/src/: chunk.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  value.c  value.h  vm.c
jlox/: .gitignore  grammar.txt
jlox/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Return.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
jlox/com/craftinginterpreters/tool/: GenerateAst.java
jlox/samples/: hello.lox  this2.lox
